# hyprland-workspaces-tui

./: Cargo.toml  README.md  build.rs  config_example.toml  default.nix  flake.nix  hyprland-workspaces-tui-wrapped
src/: app.rs  cli.rs  config.rs  elements.rs  event.rs  handler.rs  main.rs  plain_text_mode.rs  themes.rs  tui.rs  ui.rs
