[package]
name = "hyprland-workspaces-tui"
version = "1.0.0"
authors = ["Levizor <levizorri@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4"
simplelog = "0.12.2"
clap = { version = "4.5.21", features = ["derive"] }
tui-big-text = "0.7.0"
