[package]
name = "hyprland-workspaces-tui"
description = "terminal-based user interface (TUI) wrapper for the hyprland-workspaces CLI utility."
repository = "https://github.com/Levizor/hyprland-workspaces-tui"
homepage = "https://github.com/Levizor/hyprland-workspaces-tui"

version = "1.2.0"
authors = ["Levizor <levizorri@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref", "serde"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4"
simplelog = "0.12.2"
clap = { version = "4.5.21", features = ["derive"] }
tui-big-text = "0.7.0"
clap_complete = "4.5.44"
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
config = "0.15.8"
